# magnet-puzzle

./: .gitignore  README.md
Programa/: CMakeLists.txt  Makefile  feasible-least-10m.txt  feasible-no-10m.txt  feasible-results.txt  no-most-10m.txt  no-no-10m.txt  run-all.sh  sufficient-no-10m.txt  vanilla-results.txt
Programa/results-none/: output-00.txt  stdout.txt  time-00.txt  time-01.txt  time-02.txt  time-03.txt  time-04.txt  time-05.txt  time-06.txt
Programa/results-sufficient/: output-01.txt  output-02.txt  output-04.txt  stdout.txt  time-00.txt  time-01.txt  time-03.txt  time-04.txt  time-05.txt  time-06.txt
Programa/scripts/: run.sh
Programa/src/solver/: CMakeLists.txt  main.c  puzzle.c  puzzle.h  solver.c  solver.h  utils.c  utils.h
Programa/src/watcher/: watcher.c  watcher.h
Programa/tests/: test_02.txt  test_03.txt  test_04.txt  test_05.txt
Programa/tests/Lunatic/: test_06.txt  test_07.txt  test_08.txt  test_09.txt
Programa/tests/deprecated/: test_03.txt  test_04.txt  test_05.txt
Programa/tests/solver/: simple.c  utils.c
jupyter/: experiment-graphics.ipynb  graphics.py  preprocess.py
results/: feasible-most-10m.txt  results.csv
results-none/: output-03.txt  stdout.txt  time-02.txt  time-03.txt  time-04.txt  time-06.txt
results-sufficient/: output-05.txt  output-06.txt  stdout.txt  time-00.txt  time-01.txt  time-02.txt  time-04.txt  time-05.txt  time-06.txt
scripts/: run.sh
